build: avoid libvirtd link failure with CFLAGS=-g
* qemud/Makefile.am (libvirtd_LDADD): Add gnulib's libgnu.la last.
Otherwise, building with -g (no inlining) would fail due to a use
of c_isspace in libvirt_driver_qemu.a, which used to followed
libgnu.a in the link command.

--- a/qemud/Makefile.am
+++ b/qemud/Makefile.am
@@ -93,8 +93,7 @@ libvirtd_LDADD =					\
 	$(LIBXML_LIBS)					\
 	$(GNUTLS_LIBS)					\
 	$(SASL_LIBS)					\
-	$(POLKIT_LIBS)					\
-	../gnulib/lib/libgnu.la
+	$(POLKIT_LIBS)
 
 if ! WITH_DRIVER_MODULES
 if WITH_QEMU
@@ -243,6 +242,10 @@ install-init:
 uninstall-init:
 
 endif # DBUS_INIT_SCRIPTS_RED_HAT
+
+# This must be added last, since functions it provides/replaces
+# are used by nearly every other library.
+libvirtd_LDADD += ../gnulib/lib/libgnu.la
 
 endif # WITH_LIBVIRTD
 
