Oops did the wrong fix in previous commit, correct fix, Daniel

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -310,8 +310,8 @@ sc_TAB_in_indentation:
 	     $$($(VC_LIST_EXCEPT)					\
 	        | grep -E '\.[ch](\.in)?$$'				\
 	        | grep -v '^gnulib/') &&				\
-   { echo '$(ME): found TAB(s) used for indentationi of C; use spaces'	\
-		1>&2; exit 1; } || :
+	  { echo '$(ME): found TAB(s) used for indentation in C sources;'\
+	      'use spaces' 1>&2; exit 1; } || :
 
 ctype_re = isalnum|isalpha|isascii|isblank|iscntrl|isdigit|isgraph|islower\
 |isprint|ispunct|isspace|isupper|isxdigit|tolower|toupper
