--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -595,6 +595,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 	virFileReadPid;
 	virFileLinkPointsTo;
 	virParseNumber;
+	virAsprintf;
 	virRun;
 	virSkipSpaces;
 
