let qemu/kvm instances write a pid file

--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -578,6 +578,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 	virFileMakePath;
 	virFileOpenTty;
 	virFileReadLimFD;
+	virFilePid;
 	virFileReadPid;
 	virFileLinkPointsTo;
 	virParseNumber;
