--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -281,6 +281,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 
 	# buf.h
 	virBufferVSprintf;
+	virBufferEscapeString;
 	virBufferAdd;
 	virBufferAddChar;
 	virBufferContentAndReset;
@@ -360,6 +361,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 	virDomainObjFree;
 	virDomainObjListFree;
 	virDomainRemoveInactive;
+	virDomainSaveXML;
 	virDomainSaveConfig;
 	virDomainSoundDefFree;
 	virDomainSoundModelTypeFromString;
@@ -601,6 +603,7 @@ LIBVIRT_PRIVATE_@VERSION@ {
 
 	# xml.h
 	virXPathLong;
+	virXPathNode;
 	virXPathNodeSet;
 	virXPathString;
 	virXMLPropString;
