new internal logging APIs * src/logging.h src/logging.c: add the infrastructure and internal   APIs for logging, some of those APIs should be made public later * src/libvirt_sym.version.in: flag the internal APIs as such daniel

--- a/src/libvirt_sym.version.in
+++ b/src/libvirt_sym.version.in
@@ -462,6 +462,16 @@ LIBVIRT_PRIVATE_@VERSION@ {
 	virRegisterStorageDriver;
 	virRegisterDeviceMonitor;
 
+	/* logging.h */
+        virLogSetDefaultPriority;
+        virLogDefineFilter;
+        virLogDefineOutput;
+        virLogParseFilters;
+        virLogParseOutputs;
+        virLogStartup;
+        virLogShutdown;
+        virLogReset;
+        virLogMessage;
 
 	# memory.h
 	virAlloc;
