--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -667,7 +667,8 @@ qemu-kvm -net nic,model=? /dev/null
 	preferred syntax for indicating autoallocation of the TCP port to use.
 	The <code>listen</code> attribute is an IP address for the server to
 	listen on. The <code>password</code> attribute provides a VNC password
-	in clear text.</dd>
+	in clear text. The <code>keymap</code> attribute specifies the keymap
+	to use.</dd>
     </dl>
 
     <h4><a name="elementsConsole">Consoles, serial &amp; parallel devices</a></h4>
