Move --with-driver-modules symbols into a separate sym file
* src/Makefile.am (PRIVSYMFILES): Append libvirt_driver_modules.syms.
* src/libvirt_private.syms: Move virDriverLoadModule into...
* src/libvirt_driver_modules.syms: ... this new file.
Author: John Levon

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -415,6 +415,10 @@ if ENABLE_DEBUG
 PRIVSYMFILES += libvirt_debug.syms
 endif
 
+if WITH_DRIVER_MODULES
+PRIVSYMFILES += libvirt_driver_modules.syms
+endif
+
 EXTRA_DIST += libvirt_public.syms $(PRIVSYMFILES)
 
 libvirt.syms: libvirt_public.syms $(PRIVSYMFILES)
