avoid syntax-check (po-check) failure due to FP match on gettext.m4
* Makefile.maint (po-check): Exclude .m4 files.

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -558,6 +558,7 @@ po-check:
 	  files=;							\
 	  for file in $$($(VC_LIST_EXCEPT)); do				\
 	    case $$file in						\
+	      *.m4) continue;;						\
 	      *.?|*.??) ;;						\
 	      *) continue;;						\
 	    esac;							\
